--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body ng-app="productManagement">
 <div class="panel panel-primary">
-    <div class="panel-heading" style="font-size:large">Xmas Wish List - 2015</div>
+    <div class="panel-heading" style="font-size:large">Xmas Wish List - Dec 7th, 2015</div>
 
 <div class="panel-body">
 
